--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="text">
                 <h1>Welcome to my website</h1>
                 <p>This is some beautiful text.</p>
-                 <a href="Launcher.zip" class="button">Download File</a>
+                 <a href="Launcher.rar" class="button">Download File</a>
             </div>
         </div>
     </div>
